[metadata]
name = pypofatu
version = 2.0.1.dev0
author = Robert Forkel
author_email = robert_forkel@eva.mpg.de
description = programmatic access to pofatu-data
long_description = file: README.md
long_description_content_type = text/markdown
keywords = data
license = Apache 2.0
license_files = LICENSE
url = https://github.com/pofatu/pypofatu
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: BSD License

[options]
zip_safe = False
packages = find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
    csvw>=4.1
    simplepybtex
    attrs>=19.3
    clldutils>=4
    tqdm
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
pypofatu =
    metadata.json

[options.entry_points]
console_scripts =
    pofatu = pypofatu.__main__:main

[options.extras_require]
dev =
    tox
    flake8
    wheel>=0.36
    twine
    build
test =
    pytest>=5
    pytest-mock
    pytest-cov
    coverage>=4.2

[easy_install]
zip_ok = false

[bdist_wheel]
universal = 1

[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301,F405
max-line-length = 100
exclude = .tox

[tool:pytest]
minversion = 5
testpaths = tests
addopts = --cov

[coverage:run]
source = pypofatu

[coverage:report]
show_missing = true
skip_covered = true

[tox:tox]
envlist = py39, py310, py311, py312, py313, py314
isolated_build = true
skip_missing_interpreter = true

[testenv]
deps = .[test]
commands = pytest {posargs}
